--- a/components/ap7enqbfj-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/ap7enqbfj-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ap7enqbfj-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-3f786dc921.4e4l.p3.openshiftapps.com/rhtap/rhtap-qe:9ad995a1d1ccd2bb709290fc9bc64f7ebd0ed94c@sha256:0889ee07d5b95797009817e5baca7cd410554480b728f54e32a162cf6d552155
+          name: container-image
